--- a/src/assets/scss/config.scss
+++ b/src/assets/scss/config.scss
@@ -2,6 +2,7 @@ $color_A: #adce97;
 $color_B: #6a696e;
 $color_C: #f5f5f7;
 $color_D: #474648;
+$color_E: "#68676C";
 
 $color_white: white;
 $color_black: #000000;
