--- a/src/assets/scss/config.scss
+++ b/src/assets/scss/config.scss
@@ -2,7 +2,9 @@ $color_A: #adce97;
 $color_B: #6a696e;
 $color_C: #f5f5f7;
 $color_D: #474648;
-$color_E: "#68676C";
+$color_E: #68676C;
+$color_F : #DFDFE2;
+$color_G: #F5F5F5;
 
 $color_white: white;
 $color_black: #000000;
